wajig (2.0.49) unstable; urgency=low

  [ Tshepang Lekhonkhobe ]
  * CHANGELOG: now displays uninstalled entries by default. (Closes: #424668).
  * CHANGELOG: Add -c|--complete option to display the whole thing. This was
    the default option, but suggestion offered in #424668 is more sane.
  * CHANGELOG: Add -l|--latest option, replacing NEWS (which is now removed).
  * CHANGELOG: Add -x|--pager option to allow can scrolling.
  * BUILD: now uses sudo instead of fakeroot to avoid permission-related
    build failures for some packages (EG, fakeroot & cdbs). (Closes: #464003).
  * UPGRADE: Proceed to upgrade after using -b|--backup option.
  * "wajig changelog libgtk2.0-0" now works.

 -- Graham Williams <Graham.Williams@togaware.com>  Sun, 22 Aug 2010 19:25:42 +1000

wajig (2.0.48) unstable; urgency=low

  * Add new command ADDREPO to add a Launchpad PPA. Uses
    add-apt-repository. (Tshepang Lekhonkhobe)
  
  * Add -b (backup) option to UPGRADE command so it is easier to revert to
    a previous state if a problem arises. Uses dpkg-repack. (Tshepang
    Lekhonkhobe)
  
  * Cleanup debian meta data and add unit testing and cleanup various
    python code and improve readability and upgrade deprecated string
    module. (Tshepang Lekhonkhobe)

  * Tidy up the list of commands from the "list-commands"
    command. (Tshepang Lekhonkhobe) (Closes: #582252).

  * Show downgraded packages in 'wajig list-log'. (Tshepang Lekhonkhobe)
    (Closes: #366796).

  * Remove the unavailable gnome-tasksel from Suggested. (Tshepang
    Lekhonkhobe) (Closes: #549574).

 -- Graham Williams <Graham.Williams@togaware.com>  Sun, 22 Aug 2010 19:25:42 +1000

wajig (2.0.47) unstable; urgency=low

  * Use apt-get remove --auto-remove to implement remove-depend.  This is
    simpler than making wajig do the dependency checking, and runs much
    faster. (Closes: #579419).

 -- Graham Williams <Graham.Williams@togaware.com>  Wed, 19 May 2010 20:16:10 +1000
