@@ -1,6 +1,10 @@
 wajig (2.0.49) unstable; urgency=low
 
   [ Tshepang Lekhonkhobe ]
+  * UPGRADE: Add command line argument for --backup to specify target directory.
+    * Used to be "wajig --backup upgrade BKDIR".
+    * Now it's "wajig --backup=BKDIR upgrade".
+  * UPGRADE: Proceed to upgrade after using -b|--backup option.
   * CHANGELOG: now displays uninstalled entries by default. (Closes: #424668).
   * CHANGELOG: Add -c|--complete option to display the whole thing. This was
     the default option, but suggestion offered in #424668 is more sane.
@@ -8,7 +12,6 @@ wajig (2.0.49) unstable; urgency=low
   * CHANGELOG: Add -x|--pager option to allow can scrolling.
   * BUILD: now uses sudo instead of fakeroot to avoid permission-related
     build failures for some packages (EG, fakeroot & cdbs). (Closes: #464003).
-  * UPGRADE: Proceed to upgrade after using -b|--backup option.
   * "wajig changelog libgtk2.0-0" now works.
 
  -- Graham Williams <Graham.Williams@togaware.com>  Sun, 22 Aug 2010 19:25:42 +1000
